--- a/assets/locale/it_IT/LC_MESSAGES/yorg.po
+++ b/assets/locale/it_IT/LC_MESSAGES/yorg.po
@@ -35,7 +35,7 @@ msgstr "Testing"
 
 #: menu/creditpage.py:15
 msgid "Translations"
-msgstr ""
+msgstr "Traduzioni"
 
 #: menu/creditpage.py:19
 msgid "Supporters"
@@ -311,7 +311,7 @@ msgstr "gomme: aumentano l'aderenza'"
 msgid "supensions: they increase car's stability"
 msgstr "sospensioni: aumentano la stabilità"
 
-#: yyagl/racing/car/logic.py:688
+#: yyagl/racing/car/logic.py:697
 msgid "wrong way"
 msgstr "direzione sbagliata"
 
