--- a/assets/locale/gd/LC_MESSAGES/yorgmerge.po
+++ b/assets/locale/gd/LC_MESSAGES/yorgmerge.po
@@ -1,226 +1,227 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# GunChleoc <fios@foramnagaidhlig.net>, 2017.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Wuzzy <almikes@aol.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: de_DE\n"
+"POT-Creation-Date: 2017-11-09 11:41+0100\n"
+"PO-Revision-Date: 2017-11-08 21:56+0100\n"
+"Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
+"Language-Team: Fòram na Gàidhlig\n"
+"Language: gd\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
+"(n > 2 && n < 20) ? 2 : 3;\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #: menu/creditpage.py:11
 msgid "Code"
-msgstr "Code"
+msgstr "Còd"
 
 #: menu/creditpage.py:12
 msgid "Art"
-msgstr "Grafik"
+msgstr "Obair-ealain"
 
 #: menu/creditpage.py:13
 msgid "Audio"
-msgstr "Ton"
+msgstr "Fuaimean"
 
 #: menu/creditpage.py:14
 msgid "Testing"
-msgstr "Testen"
+msgstr "Deuchainnean"
 
 #: menu/creditpage.py:15
 msgid "Translations"
-msgstr "Übersetzungen"
+msgstr "Eadar-theangachadh"
 
 #: menu/creditpage.py:19
 msgid "Supporters"
-msgstr "Unterstützer"
+msgstr "Luchd-taic"
 
 #: menu/inputpage.py:27 menu/inputpage.py:30
 msgid "Use the joypad when present"
-msgstr "Joypad verwenden, sobald vorhanden"
+msgstr "Cleachd joypad ma tha fear ann"
 
 #: menu/inputpage.py:39
 msgid "Accelerate"
-msgstr "Beschleunigen"
+msgstr "Luathaich"
 
 #: menu/inputpage.py:40
 msgid "Brake/Reverse"
-msgstr "Bremsen/Rückwärts"
+msgstr "Brèig/An comhair a’ chùil"
 
 #: menu/inputpage.py:41
 msgid "Left"
-msgstr "Links"
+msgstr "Gu clì"
 
 #: menu/inputpage.py:42
 msgid "Right"
-msgstr "Rechts"
+msgstr "Gu deas"
 
 #: menu/inputpage.py:43
 msgid "Weapon"
-msgstr "Waffe"
+msgstr "Arm"
 
 #: menu/inputpage.py:44
 msgid "Respawn"
-msgstr "Zurücksetzen"
+msgstr "Ath-shìol"
 
 #: menu/inputpage.py:45
 msgid "Pause"
-msgstr "Pause"
+msgstr "Cuir ’na stad"
 
 #: menu/inputpage.py:53
 msgid "Press the key to record it"
-msgstr "Taste drücken, um sie zu verwenden"
+msgstr "Brùth air an iuchair gus a chlàradh"
 
 #: menu/optionpage.py:37
 msgid "Language"
-msgstr "Sprache"
+msgstr "Cànan"
 
 #: menu/optionpage.py:42
 msgid "Volume"
-msgstr "Lautstärke"
+msgstr "Àirde na fuaime"
 
 #: menu/optionpage.py:47
 msgid "Fullscreen"
-msgstr "Vollbild"
+msgstr "Làn-sgrìn"
 
 #: menu/optionpage.py:53
 msgid "Resolution"
-msgstr "Bildschirmauflösung"
+msgstr "Dùmhlachd-bhreacaidh"
 
 #: menu/optionpage.py:63
 msgid "Antialiasing"
-msgstr "Anti-Aliasing"
+msgstr "Antialiasing"
 
 #: menu/optionpage.py:66
 msgid "(from the next execution)"
-msgstr "(von der nächsten Ausführung)"
+msgstr "(on ath-thuras a thèid a ruith)"
 
 #: menu/optionpage.py:71
 msgid "Shaders"
-msgstr "Shader"
+msgstr "Sgàileadairean"
 
 #: menu/optionpage.py:75
 msgid "Cars number"
-msgstr "Anzahl Autos"
+msgstr "Àireamh nan càraichean"
 
 #: menu/optionpage.py:82
 msgid "Configure input"
-msgstr "Eingabe konfigurieren"
+msgstr "Rèitich an t-ion-chur"
 
 #: menu/carpage.py:26
 msgid "Select the car"
-msgstr "Auto wählen"
+msgstr "Tagh an càr"
 
 #: menu/carpage.py:72 menu/driverpage.py:71
 msgid "adherence"
-msgstr "Haftvermögen"
+msgstr "sticeadh"
 
 #: menu/carpage.py:72 menu/driverpage.py:71
 msgid "speed"
-msgstr "Tempo"
+msgstr "luaths"
 
 #: menu/carpage.py:73 menu/driverpage.py:72
 msgid "stability"
-msgstr "Stabilität"
+msgstr "seasmhachd"
 
 #: menu/thankspage.py:15
 msgid "Thanks to: "
-msgstr "Danke an: "
+msgstr "Taing do: "
 
 #: menu/trackpage.py:17
 msgid "Select the track"
-msgstr "Strecke wählen"
+msgstr "Tagh an t-slighe"
 
 #: menu/driverpage.py:43
 msgid "Select the driver"
-msgstr "Fahrer auswählen"
+msgstr "Tagh an draibhear"
 
 #: menu/driverpage.py:47
 msgid "Write your name:"
-msgstr "Namen eingeben:"
+msgstr "Sgrìobh d’ ainm:"
 
 #: menu/driverpage.py:52 menu/driverpage.py:125 menu/driverpage.py:126
 #: menu/driverpage.py:127 menu/driverpage.py:129 menu/driverpage.py:132
 msgid "your name"
-msgstr "Ihr Name"
+msgstr "d’ ainm"
 
 #: menu/mainpage.py:43
 msgid "Single Player"
-msgstr "Einzelspieler"
+msgstr "Aon chluicheadair"
 
 #: menu/mainpage.py:44
 msgid "Multiplayer"
-msgstr "Mehrspieler"
+msgstr "Ioma-chluicheadair"
 
 #: menu/mainpage.py:45
 msgid "Options"
-msgstr "Einstellungen"
+msgstr "Roghainnean"
 
 #: menu/mainpage.py:46
 msgid "Support us"
-msgstr "Unterstützen Sie uns"
+msgstr "Thoir taic dhuinn"
 
 #: menu/mainpage.py:47
 msgid "Credits"
-msgstr "Mitwirkende"
+msgstr "Urram"
 
 #: menu/mainpage.py:48
 msgid "Quit"
-msgstr "Verlassen"
+msgstr "Fàg an-seo"
 
 #: menu/mainpage.py:67
 msgid "Note: the game is work-in-progress"
-msgstr "Achtung: Das Spiel ist noch unfertig."
+msgstr "An aire: tha sinn ag obair air a’ gheama seo fhathast"
 
 #: menu/mainpage.py:98 menu/mainpage.py:101
 msgid "Last news:"
-msgstr "Neueste Nachrichten:"
+msgstr "Na naidheachdan as ùire:"
 
 #: menu/mainpage.py:111 menu/mainpage.py:114
 msgid "show"
-msgstr "anzeigen"
+msgstr "seall"
 
 #: menu/clientpage.py:32
 msgid "Client"
-msgstr "Client"
+msgstr "Cliant"
 
 #: menu/clientpage.py:39
 msgid "Connect"
-msgstr "Verbinden"
+msgstr "Ceangail"
 
 #: menu/clientpage.py:50
 msgid "Waiting for the server"
-msgstr "Auf Server warten"
+msgstr "A’ feitheamh ris an fhrithealaiche"
 
 #: menu/clientpage.py:54
 msgid "Error"
-msgstr "Fehler"
+msgstr "Mearachd"
 
 #: menu/serverpage.py:23
 msgid "connection from "
-msgstr "Verbindung von "
+msgstr "ceangal o "
 
 #: menu/serverpage.py:51
 msgid "Start"
-msgstr "Start"
+msgstr "Tòisich"
 
 #: menu/singleplayerpage.py:15
 msgid "Single race"
-msgstr "Einzelrennen"
+msgstr "Rèis a-mhàin"
 
 #: menu/singleplayerpage.py:16
 msgid "New season"
-msgstr "Neue Saison"
+msgstr "Seusan ùr"
 
 #: menu/singleplayerpage.py:17
 msgid "Continue season"
-msgstr "Saison fortsetzen"
+msgstr "Lean air adhart air an t-seusan"
 
 #: menu/exitmenu/exitpage.py:15
 msgid ""
@@ -228,40 +229,40 @@ msgid ""
 "\n"
 "It helps us! Thank you!"
 msgstr ""
-"Bitte besuchen Sie unsere Webpräsenz\n"
-"nach dem Beenden!\n"
-"Das hilft uns! Dankesehr!"
+"Nach tadhail thu air an làrach-lìn againn às dèidh fhàgail?\n"
+"\n"
+"Cuidichidh seo sinn! Mòran taing!"
 
 #: menu/exitmenu/exitpage.py:20
 msgid "visit our site after exiting"
-msgstr "unsere Webpräsenz nach dem Beenden besuchen"
+msgstr "tadhail air an làrach-lìn againn às dèidh fàgail"
 
 #: menu/exitmenu/exitpage.py:23
 msgid "don't visit our site after exiting"
-msgstr "unsere Webpräsenz nach dem Beenden nicht besuchen"
+msgstr "na tadhail air an làrach-lìn againn às dèidh fàgail"
 
 #: menu/ingamemenu/ingamepage.py:18
-#, python-format
+#, fuzzy, python-format
 msgid ""
 "What do you want to do?\n"
 "\n"
 "Note: use '%s' for pausing the game."
 msgstr ""
-"Was wollen Sie tun?\n"
+"Dè tha thu airson dèanamh?\n"
 "\n"
-"Tipp: Benutzen Sie „%s“, um das Spiel zu pausieren."
+"An aire: cleachd “p” gus an geama a chur ’na stad."
 
 #: menu/ingamemenu/ingamepage.py:27
 msgid "back to the game"
-msgstr "zurück zum Spiel"
+msgstr "till dhan gheama"
 
 #: menu/ingamemenu/ingamepage.py:28
 msgid "back to the main menu"
-msgstr "zurück zum Hauptmenü"
+msgstr "till dhan phrìomh chlàr-taice"
 
 #: yorg/yorg.py:109 yorg/fsm.py:111
 msgid "Rome"
-msgstr "Rom"
+msgstr "An Ròimh"
 
 #: yorg/yorg.py:109 yorg/fsm.py:111
 msgid "Sheffield"
@@ -281,170 +282,170 @@ msgstr "Dubai"
 
 #: yyagl/engine/gui/page.py:154
 msgid "Back"
-msgstr "Zurück"
+msgstr "Air ais"
 
 #: yyagl/engine/gui/mainpage.py:40
 msgid "version: "
-msgstr "Version: "
+msgstr "tionndadh: "
 
 #: yyagl/racing/tuning/gui.py:24
 msgid "What do you want to upgrade?"
-msgstr "Was möchten Sie aufrüsten?"
+msgstr "Dè bu toigh leat àrdachadh?"
 
 #: yyagl/racing/tuning/gui.py:38 yyagl/racing/tuning/gui.py:44
 #: yyagl/racing/tuning/gui.py:50
 msgid "current upgrades: +"
-msgstr "Derzeitige Aufrüstungen: +"
+msgstr "na h-àrdachaidhean làithreach: +"
 
 #: yyagl/racing/tuning/gui.py:56
 msgid "engine: it increases car's maximum speed"
-msgstr "Motor: Erhöht die Höchstgeschwindigkeit"
+msgstr "einnsean: meudaichidh seo an luaths as motha aig an einnsean"
 
 #: yyagl/racing/tuning/gui.py:62
 msgid "tires: they increase car's adherence"
-msgstr "Räder: Erhöhen das Haftvermögen des Wagens"
+msgstr "taidhirean: meudaichidh iad sticeadh a’ chàir"
 
 #: yyagl/racing/tuning/gui.py:68
 msgid "supensions: they increase car's stability"
-msgstr "Aufhängungen: Erhöhen die Stabilität des Wagens"
+msgstr "crochaidhean: cuiridh e ri seasmhachd a’ chàir"
 
 #: yyagl/racing/car/logic.py:697
 msgid "wrong way"
-msgstr "Falsche Richtung"
+msgstr "rathad cearr"
 
 #: yyagl/racing/car/gui.py:140
 msgid "speed:"
-msgstr "Tempo:"
+msgstr "luaths:"
 
 #: yyagl/racing/car/gui.py:142
 msgid "lap:"
-msgstr "Runde:"
+msgstr "cuairt:"
 
 #: yyagl/racing/car/gui.py:143
 msgid "time:"
-msgstr "Zeit:"
+msgstr "ùine:"
 
 #: yyagl/racing/car/gui.py:144
 msgid "best lap:"
-msgstr "Beste Runde:"
+msgstr "a’ chuairt as fhearr:"
 
 #: yyagl/racing/car/gui.py:145
 msgid "ranking:"
-msgstr "Rangliste:"
+msgstr "rangachadh:"
 
 #: yyagl/racing/car/gui.py:146
 msgid "damages:"
-msgstr "Schäden:"
+msgstr "dochann:"
 
 #: yyagl/racing/car/gui.py:147
 msgid "weapon:"
-msgstr "Waffe:"
+msgstr "arm:"
 
 #: yyagl/racing/car/gui.py:166 yyagl/racing/car/gui.py:169
 msgid "low"
-msgstr "niedrig"
+msgstr "ìosal"
 
 #: yyagl/racing/car/gui.py:170
 msgid "hi"
-msgstr "hoch"
+msgstr "àrd"
 
 #: yyagl/racing/ranking/gui.py:28
 #: yyagl/racing/race/gui/loading/loadingpage.py:64
 msgid "Ranking"
-msgstr "Rangliste"
+msgstr "Rangachadh"
 
 #: yyagl/racing/ranking/gui.py:45
 msgid "Congratulations!"
-msgstr "Glückwünsche!"
+msgstr "Meal do naidheachd!"
 
 #: yyagl/racing/ranking/gui.py:54 yyagl/racing/race/gui/results.py:78
 msgid "Continue"
-msgstr "Weiter"
+msgstr "Air adhart"
 
 #: yyagl/racing/race/event.py:58
 #, python-format
 msgid "press %s to respawn"
-msgstr "%s zum Zurücksetzen"
+msgstr "brùth air %s airson ath-shìoladh"
 
 #: yyagl/racing/race/gui/countdown.py:19
 msgid "GO!"
-msgstr "LOS!"
+msgstr "SIUTHAD!"
 
 #: yyagl/racing/race/gui/results.py:35
 msgid "LAP"
-msgstr "RUNDE"
+msgstr "CUAIRT"
 
 #: yyagl/racing/race/gui/results.py:36
 msgid "TIME"
-msgstr "ZEIT"
+msgstr "ÙINE"
 
 #: yyagl/racing/race/gui/results.py:37
 msgid "RANKING"
-msgstr "RANGLISTE"
+msgstr "RANGACHADH"
 
 #: yyagl/racing/race/gui/results.py:50
 msgid "share:"
-msgstr "Teilen:"
+msgstr "co-roinn:"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:26
 msgid "LOADING..."
-msgstr "LADEN …"
+msgstr "’GA LUCHDADH…"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:34
 msgid "track: "
-msgstr "Strecke: "
+msgstr "slighe: "
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:53
 msgid "Starting grid"
-msgstr "Startaufstellung"
+msgstr "Griod tòiseachaidh"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:73
 msgid "Controls"
-msgstr "Steuerung"
+msgstr "Stiùireadh"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:77
 msgid "joypad"
-msgstr "Joypad"
+msgstr "joypad"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:81
 msgid "accelerate"
-msgstr "Beschleunigen"
+msgstr "luathaich"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:82
 msgid "brake/reverse"
-msgstr "Bremsen/Rückwärts"
+msgstr "brèig/an comhair a’ chùil"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:83
 msgid "left"
-msgstr "Links"
+msgstr "gu clì"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:84
 msgid "right"
-msgstr "Rechts"
+msgstr "gu deas"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:85
 msgid "fire"
-msgstr "Feuern"
+msgstr "loisg"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:86
 msgid "respawn"
-msgstr "Zurücksetzen"
+msgstr "ath-shìol"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:89
 msgid "Upgrades"
-msgstr "Aufrüstungen"
+msgstr "Àrdachaidhean"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:95
 msgid "engine: +"
-msgstr "Motor: +"
+msgstr "einnsean: +"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:100
 msgid "tires: +"
-msgstr "Räder: +"
+msgstr "taidhirean: +"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:105
 msgid "suspensions: +"
-msgstr "Aufhängungen: +"
+msgstr "crochaidhean: +"
 
 #~ msgid "insert the server address"
-#~ msgstr "Serveradresse eingeben"
+#~ msgstr "cuir a-steach seòladh an fhrithealaiche"
