--- a/assets/po/es_ES.po
+++ b/assets/po/es_ES.po
@@ -1,7 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
+# SPANISH TRANSLATION
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <leillo1975@jugandoenlinux.com>, 2017.
 #
 #, fuzzy
 msgid ""
@@ -10,213 +10,213 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Wuzzy <almikes@aol.com>\n"
+"Last-Translator: Leandro Vergara <leillo1975@jugandoenlinux.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: de_DE\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: menu/creditpage.py:11
 msgid "Code"
-msgstr "Code"
+msgstr "Código"
 
 #: menu/creditpage.py:12
 msgid "Art"
-msgstr "Grafik"
+msgstr "Arte"
 
 #: menu/creditpage.py:13
 msgid "Audio"
-msgstr "Ton"
+msgstr "Audio"
 
 #: menu/creditpage.py:14
 msgid "Translations"
-msgstr "Übersetzungen"
+msgstr "Traducciones"
 
 #: menu/creditpage.py:18
 msgid "Supporters"
-msgstr "Unterstützer"
+msgstr "Contribuyentes"
 
 #: menu/inputpage.py:27 menu/inputpage.py:30
 msgid "Use the joypad when present"
-msgstr "Joypad verwenden, sobald vorhanden"
+msgstr "Usa el joypad si está presente"
 
 #: menu/inputpage.py:39
 msgid "Accelerate"
-msgstr "Beschleunigen"
+msgstr "Aceleración"
 
 #: menu/inputpage.py:40
 msgid "Brake/Reverse"
-msgstr "Bremsen/Rückwärts"
+msgstr "Freno/Atrás"
 
 #: menu/inputpage.py:41
 msgid "Left"
-msgstr "Links"
+msgstr "Izquierda"
 
 #: menu/inputpage.py:42
 msgid "Right"
-msgstr "Rechts"
+msgstr "Derecha"
 
 #: menu/inputpage.py:43
 msgid "Weapon"
-msgstr "Waffe"
+msgstr "Arma"
 
 #: menu/inputpage.py:44
 msgid "Respawn"
-msgstr "Zurücksetzen"
+msgstr "Recolocar"
 
 #: menu/inputpage.py:45
 msgid "Pause"
-msgstr "Pause"
+msgstr "Pausa"
 
 #: menu/inputpage.py:53
 msgid "Press the key to record it"
-msgstr "Taste drücken, um sie zu verwenden"
+msgstr "Presiona la tecla para memorizarla"
 
 #: menu/optionpage.py:37
 msgid "Language"
-msgstr "Sprache"
+msgstr "Idioma"
 
 #: menu/optionpage.py:42
 msgid "Volume"
-msgstr "Lautstärke"
+msgstr "Volumen"
 
 #: menu/optionpage.py:47
 msgid "Fullscreen"
-msgstr "Vollbild"
+msgstr "Pantalla Completa"
 
 #: menu/optionpage.py:53
 msgid "Resolution"
-msgstr "Bildschirmauflösung"
+msgstr "Resolución"
 
 #: menu/optionpage.py:63
 msgid "Antialiasing"
-msgstr "Anti-Aliasing"
+msgstr "Antialiasing"
 
 #: menu/optionpage.py:66
 msgid "(from the next execution)"
-msgstr "(von der nächsten Ausführung)"
+msgstr "(de la próxima ejecución)"
 
 #: menu/optionpage.py:71
 msgid "Shaders"
-msgstr "Shader"
+msgstr "Shaders"
 
 #: menu/optionpage.py:75
 msgid "Cars number"
-msgstr "Anzahl Autos"
+msgstr "Número de Coches"
 
 #: menu/optionpage.py:82
 msgid "Configure input"
-msgstr "Eingabe konfigurieren"
+msgstr "Configurar las teclas"
 
 #: menu/carpage.py:26
 msgid "Select the car"
-msgstr "Auto wählen"
+msgstr "Seleciona el coche"
 
 #: menu/carpage.py:72 menu/driverpage.py:71
 msgid "adherence"
-msgstr "Haftvermögen"
+msgstr "Aderencia"
 
 #: menu/carpage.py:72 menu/driverpage.py:71
 msgid "speed"
-msgstr "Tempo"
+msgstr "Velocidad"
 
 #: menu/carpage.py:73 menu/driverpage.py:72
 msgid "stability"
-msgstr "Stabilität"
+msgstr "Estabilidad"
 
 #: menu/thankspage.py:15
 msgid "Thanks to: "
-msgstr "Danke an: "
+msgstr "Gracias a:"
 
 #: menu/trackpage.py:17
 msgid "Select the track"
-msgstr "Strecke wählen"
+msgstr "Selecciona el Circuito"
 
 #: menu/driverpage.py:43
 msgid "Select the driver"
-msgstr "Fahrer auswählen"
+msgstr "Selecciona el Piloto"
 
 #: menu/driverpage.py:47
 msgid "Write your name:"
-msgstr "Namen eingeben:"
+msgstr "Escribe tu Nombre:"
 
 #: menu/driverpage.py:52 menu/driverpage.py:125 menu/driverpage.py:126
 #: menu/driverpage.py:127 menu/driverpage.py:129 menu/driverpage.py:132
 msgid "your name"
-msgstr "Ihr Name"
+msgstr "Tu Nombre"
 
 #: menu/mainpage.py:43
 msgid "Single Player"
-msgstr "Einzelspieler"
+msgstr "Un Jugador"
 
 #: menu/mainpage.py:44
 msgid "Multiplayer"
-msgstr "Mehrspieler"
+msgstr "Multijugador"
 
 #: menu/mainpage.py:45
 msgid "Options"
-msgstr "Einstellungen"
+msgstr "Opciones"
 
 #: menu/mainpage.py:46
 msgid "Support us"
-msgstr "Unterstützen Sie uns"
+msgstr "Ayúdanos"
 
 #: menu/mainpage.py:47
 msgid "Credits"
-msgstr "Mitwirkende"
+msgstr "Créditos"
 
 #: menu/mainpage.py:48
 msgid "Quit"
-msgstr "Verlassen"
+msgstr "Salir"
 
 #: menu/mainpage.py:67
 msgid "Note: the game is work-in-progress"
-msgstr "Achtung: Das Spiel ist noch unfertig."
+msgstr "Nota: el juego está en desarrollo"
 
 #: menu/mainpage.py:98 menu/mainpage.py:101
 msgid "Last news:"
-msgstr "Neueste Nachrichten:"
+msgstr "Últimas Noticias"
 
 #: menu/mainpage.py:111 menu/mainpage.py:114
 msgid "show"
-msgstr "anzeigen"
+msgstr "Mostrar"
 
 #: menu/clientpage.py:32
 msgid "Client"
-msgstr "Client"
+msgstr "Cliente"
 
 #: menu/clientpage.py:39
 msgid "Connect"
-msgstr "Verbinden"
+msgstr "Conectar"
 
 #: menu/clientpage.py:50
 msgid "Waiting for the server"
-msgstr "Auf Server warten"
+msgstr "Esperando por el Servidor"
 
 #: menu/clientpage.py:54 menu/serverpage.py:59
 msgid "Error"
-msgstr "Fehler"
+msgstr "Error"
 
 #: menu/serverpage.py:24
 msgid "connection from "
-msgstr "Verbindung von "
+msgstr "Conexión desde"
 
 #: menu/serverpage.py:52
 msgid "Start"
-msgstr "Start"
+msgstr "Empezar"
 
 #: menu/singleplayerpage.py:15
 msgid "Single race"
-msgstr "Einzelrennen"
+msgstr "Carrera Única"
 
 #: menu/singleplayerpage.py:16
 msgid "New season"
-msgstr "Neue Saison"
+msgstr "Nueva Sesión"
 
 #: menu/singleplayerpage.py:17
 msgid "Continue season"
-msgstr "Saison fortsetzen"
+msgstr "Continuar Sesión"
 
 #: menu/exitmenu/exitpage.py:15
 msgid ""
@@ -224,17 +224,16 @@ msgid ""
 "\n"
 "It helps us! Thank you!"
 msgstr ""
-"Bitte besuchen Sie unsere Webpräsenz\n"
-"nach dem Beenden!\n"
-"Das hilft uns! Dankesehr!"
+"Por favor, visita nuestra web antes de salir!\n"
+"Eso nos ayudará, Gracias!"
 
 #: menu/exitmenu/exitpage.py:20
 msgid "visit our site after exiting"
-msgstr "unsere Webpräsenz nach dem Beenden besuchen"
+msgstr "visitar nuestra web antes de salir"
 
 #: menu/exitmenu/exitpage.py:23
 msgid "don't visit our site after exiting"
-msgstr "unsere Webpräsenz nach dem Beenden nicht besuchen"
+msgstr "no visitar nuestro web antes de salir"
 
 #: menu/ingamemenu/ingamepage.py:18
 #, python-format
@@ -243,21 +242,21 @@ msgid ""
 "\n"
 "Note: use '%s' for pausing the game."
 msgstr ""
-"Was wollen Sie tun?\n"
+"¿Qué quieres hacer?\n"
 "\n"
-"Tipp: Benutzen Sie „%s“, um das Spiel zu pausieren."
+"Nota: Usa '%s' para pausar el juego."
 
 #: menu/ingamemenu/ingamepage.py:27
 msgid "back to the game"
-msgstr "zurück zum Spiel"
+msgstr "Volver al Juego"
 
 #: menu/ingamemenu/ingamepage.py:28
 msgid "back to the main menu"
-msgstr "zurück zum Hauptmenü"
+msgstr "Volver al Menú Principal"
 
 #: yorg/yorg.py:113 yorg/fsm.py:111
 msgid "Rome"
-msgstr "Rom"
+msgstr "Roma"
 
 #: yorg/yorg.py:113 yorg/fsm.py:111
 msgid "Sheffield"
@@ -277,126 +276,126 @@ msgstr "Dubai"
 
 #: yyagl/engine/gui/page.py:154
 msgid "Back"
-msgstr "Zurück"
+msgstr "Volver"
 
 #: yyagl/engine/gui/mainpage.py:40
 msgid "version: "
-msgstr "Version: "
+msgstr "Versión: "
 
 #: yyagl/racing/tuning/gui.py:24
 msgid "What do you want to upgrade?"
-msgstr "Was möchten Sie aufrüsten?"
+msgstr "¿Qué quieres actualizar?"
 
 #: yyagl/racing/tuning/gui.py:38 yyagl/racing/tuning/gui.py:44
 #: yyagl/racing/tuning/gui.py:50
 msgid "current upgrades: +"
-msgstr "Derzeitige Aufrüstungen: +"
+msgstr "Mejoras Actuales: +"
 
 #: yyagl/racing/tuning/gui.py:56
 msgid "engine: it increases car's maximum speed"
-msgstr "Motor: Erhöht die Höchstgeschwindigkeit"
+msgstr "Motor: Incrementa la velocidad máxima del coche"
 
 #: yyagl/racing/tuning/gui.py:62
 msgid "tires: they increase car's adherence"
-msgstr "Räder: Erhöhen das Haftvermögen des Wagens"
+msgstr "Ruedas: Aumentan la aderencia del coche"
 
 #: yyagl/racing/tuning/gui.py:68
 msgid "supensions: they increase car's stability"
-msgstr "Aufhängungen: Erhöhen die Stabilität des Wagens"
+msgstr "Suspensión: Mejora la estabilidad del coche"
 
 #: yyagl/racing/car/logic.py:718
 msgid "wrong way"
-msgstr "Falsche Richtung"
+msgstr "Camino Erróneo"
 
 #: yyagl/racing/car/gui.py:140
 msgid "speed:"
-msgstr "Tempo:"
+msgstr "Velocidad:"
 
 #: yyagl/racing/car/gui.py:142
 msgid "lap:"
-msgstr "Runde:"
+msgstr "Vuelta:"
 
 #: yyagl/racing/car/gui.py:143
 msgid "time:"
-msgstr "Zeit:"
+msgstr "Tiempo:"
 
 #: yyagl/racing/car/gui.py:144
 msgid "best lap:"
-msgstr "Beste Runde:"
+msgstr "Mejor Vuelta:"
 
 #: yyagl/racing/car/gui.py:145
 msgid "ranking:"
-msgstr "Rangliste:"
+msgstr "Posición:"
 
 #: yyagl/racing/car/gui.py:146
 msgid "damages:"
-msgstr "Schäden:"
+msgstr "Daños:"
 
 #: yyagl/racing/car/gui.py:147
 msgid "weapon:"
-msgstr "Waffe:"
+msgstr "Arma:"
 
 #: yyagl/racing/car/gui.py:166 yyagl/racing/car/gui.py:169
 msgid "low"
-msgstr "niedrig"
+msgstr "Bajos"
 
 #: yyagl/racing/car/gui.py:170
 msgid "hi"
-msgstr "hoch"
+msgstr "Altos"
 
 #: yyagl/racing/ranking/gui.py:28
 #: yyagl/racing/race/gui/loading/loadingpage.py:64
 msgid "Ranking"
-msgstr "Rangliste"
+msgstr "Posición"
 
 #: yyagl/racing/ranking/gui.py:45
 msgid "Congratulations!"
-msgstr "Glückwünsche!"
+msgstr "¡Felicidades!"
 
 #: yyagl/racing/ranking/gui.py:54 yyagl/racing/race/gui/results.py:78
 msgid "Continue"
-msgstr "Weiter"
+msgstr "Continuar"
 
 #: yyagl/racing/race/event.py:65
 #, python-format
 msgid "press %s to respawn"
-msgstr "%s zum Zurücksetzen"
+msgstr "presiona %s para recolocar"
 
 #: yyagl/racing/race/gui/countdown.py:19
 msgid "GO!"
-msgstr "LOS!"
+msgstr "¡Adelante!"
 
 #: yyagl/racing/race/gui/results.py:35
 msgid "LAP"
-msgstr "RUNDE"
+msgstr "VUELTA"
 
 #: yyagl/racing/race/gui/results.py:36
 msgid "TIME"
-msgstr "ZEIT"
+msgstr "TIEMPO"
 
 #: yyagl/racing/race/gui/results.py:37
 msgid "RANKING"
-msgstr "RANGLISTE"
+msgstr "CLASIFICACIÓN"
 
 #: yyagl/racing/race/gui/results.py:50
 msgid "share:"
-msgstr "Teilen:"
+msgstr "Compartir:"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:26
 msgid "LOADING..."
-msgstr "LADEN …"
+msgstr "CARGANDO..."
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:34
 msgid "track: "
-msgstr "Strecke: "
+msgstr "Vuelta: "
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:53
 msgid "Starting grid"
-msgstr "Startaufstellung"
+msgstr "Parrilla de Salida"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:73
 msgid "Controls"
-msgstr "Steuerung"
+msgstr "Controles"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:77
 msgid "joypad"
@@ -404,31 +403,31 @@ msgstr "Joypad"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:81
 msgid "accelerate"
-msgstr "Beschleunigen"
+msgstr "Acelerar"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:82
 msgid "brake/reverse"
-msgstr "Bremsen/Rückwärts"
+msgstr "Freno/Atrás"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:83
 msgid "left"
-msgstr "Links"
+msgstr "Izquierda"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:84
 msgid "right"
-msgstr "Rechts"
+msgstr "Derecha"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:85
 msgid "fire"
-msgstr "Feuern"
+msgstr "Disparar"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:86
 msgid "respawn"
-msgstr "Zurücksetzen"
+msgstr "Recolocar"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:89
 msgid "Upgrades"
-msgstr "Aufrüstungen"
+msgstr "Mejoras"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:95
 msgid "engine: +"
@@ -436,14 +435,11 @@ msgstr "Motor: +"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:100
 msgid "tires: +"
-msgstr "Räder: +"
+msgstr "Ruedas: +"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:105
 msgid "suspensions: +"
-msgstr "Aufhängungen: +"
+msgstr "Suspensión: +"
 
 #~ msgid "Testing"
-#~ msgstr "Testen"
-
-#~ msgid "insert the server address"
-#~ msgstr "Serveradresse eingeben"
+#~ msgstr "Pruebas"
