--- a/assets/po/fr_FR.po
+++ b/assets/po/fr_FR.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-06 23:57+0200\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2018-04-07 10:57+0000\n"
+"Last-Translator: xin <xin@riseup.net>\n"
 "Language-Team: \n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: xin <xin@riseup.net>\n"
-"Language: fr_FR\n"
 
 #: menu/creditpage.py:10
 msgid "Code"
@@ -146,30 +146,33 @@ msgstr "enregistrer le mot de passe"
 
 #: menu/loginpage.py:44
 msgid "(only if your computer is not shared with other people)"
-msgstr "(seulement si votre ordinateur n'est pas partagé avec d'autres personnes)"
+msgstr ""
+"(seulement si votre ordinateur n'est pas partagé avec d'autres personnes)"
 
 #: menu/loginpage.py:47
 msgid ""
-"1. If you are a supporter, please write us (flavio@ya2.it) your jabber id so we "
-"can highlight your account as a supporter one.\n"
-"2. Yorg sends your XMPP presence to other Yorg users, so they can see your XMPP "
-"presence status. If you don't want this, please don't use your personal account "
-"and create a new one for Yorg.\n"
-"3. When you add a Yorg friend, you are adding it to your account's roster too.\n"
-"4. Yorg's XMPP code is still experimental: if you have important data in your XMPP "
-"account, please create a new account for playing Yorg with."
+"1. If you are a supporter, please write us (flavio@ya2.it) your jabber id so "
+"we can highlight your account as a supporter one.\n"
+"2. Yorg sends your XMPP presence to other Yorg users, so they can see your "
+"XMPP presence status. If you don't want this, please don't use your personal "
+"account and create a new one for Yorg.\n"
+"3. When you add a Yorg friend, you are adding it to your account's roster "
+"too.\n"
+"4. Yorg's XMPP code is still experimental: if you have important data in "
+"your XMPP account, please create a new account for playing Yorg with."
 msgstr ""
 "1. Si vous êtres un soutien, veuillez nous envoyer votre identifiant jabber "
 "(flavio@ya2.it) pour que nous puissions mettre en valeur votre compte comme "
 "soutien.\n"
-"2. Yorg envoi votre présence XMPP aux autres personnes utilisant Yorg, ainsi elles "
-"peuvent voir votre statut de présence XMPP. Si vous ne le voulez pas, veuillez ne "
-"pas utiliser de compte personnel et créez en un nouveau pour Yorg.\n"
-"3. Quand vous ajoutez un ami Yorg, vous l'ajoutez également à la liste de votre "
-"compte.\n"
+"2. Yorg envoi votre présence XMPP aux autres personnes utilisant Yorg, ainsi "
+"elles peuvent voir votre statut de présence XMPP. Si vous ne le voulez pas, "
+"veuillez ne pas utiliser de compte personnel et créez en un nouveau pour "
+"Yorg.\n"
+"3. Quand vous ajoutez un ami Yorg, vous l'ajoutez également à la liste de "
+"votre compte.\n"
 "4. Le code XMPP de Yorg est encore expérimental : si vous avez des données "
-"importantes sur votre compte XMPP, veuillez créer un nouveau compte pour jouer à "
-"Yorg."
+"importantes sur votre compte XMPP, veuillez créer un nouveau compte pour "
+"jouer à Yorg."
 
 #: menu/loginpage.py:101
 msgid "Error"
@@ -185,9 +188,9 @@ msgstr "Sélectionner le circuit"
 
 #: menu/check_dlg.py:13
 msgid ""
-"The jabber id that you've inserted is not correct: it should be something like "
-"nickname@domainname.tld where nickname is your nickname and domainname.tld is a "
-"valid domain."
+"The jabber id that you've inserted is not correct: it should be something "
+"like nickname@domainname.tld where nickname is your nickname and domainname."
+"tld is a valid domain."
 msgstr ""
 "L'identifiant jabber que vous avez inséré n'est pas correct : cela doit être "
 "quelque chose comme surnom@nomdedomaine.tld où surnom est votre surnom et "
@@ -405,12 +408,12 @@ msgstr "retirer de cette partie"
 #: menu/multiplayer/network_dlg.py:13
 msgid ""
 "Connection error. Please check that your router is configured for doing port-"
-"forwarding for port 9099 on your host and your firewall allows traffic for Yorg on "
-"port 9099."
+"forwarding for port 9099 on your host and your firewall allows traffic for "
+"Yorg on port 9099."
 msgstr ""
-"Erreur de connexion. Veillez vérifier que votre routeur est configuré pour faire "
-"de la redirection de port pour le port 9099 sur votre hôte et que votre pare-feu "
-"autorise le trafic pour Yorg sur le port 9099."
+"Erreur de connexion. Veillez vérifier que votre routeur est configuré pour "
+"faire de la redirection de port pour le port 9099 sur votre hôte et que "
+"votre pare-feu autorise le trafic pour Yorg sur le port 9099."
 
 #: menu/multiplayer/invite_dlg.py:16
 #, python-format
@@ -510,7 +513,8 @@ msgstr "bas"
 msgid "hi"
 msgstr "haut"
 
-#: yyagl/racing/ranking/gui.py:27 yyagl/racing/race/gui/loading/loadingpage.py:63
+#: yyagl/racing/ranking/gui.py:27
+#: yyagl/racing/race/gui/loading/loadingpage.py:63
 msgid "Ranking"
 msgstr "Classement"
 
