--- a/assets/po/es_ES.po
+++ b/assets/po/es_ES.po
@@ -402,12 +402,14 @@ msgstr "borrar de la partida"
 
 #: menu/multiplayer/network_dlg.py:13
 msgid ""
-"Connection error. Please check that your router is configured for doing port-"
-"forwarding for port 9099 on your host and your firewall allows traffic for "
-"Yorg on port 9099."
+"Connection error. Please check that (i) your firewall allows traffic for "
+"Yorg on port 9099 and (ii) the server user has opened her port 9099 (here is "
+"a guide for checking it: http://www.ya2.it/pages/check-your-ports.html)."
 msgstr ""
-"Error de Conexión. Por favor, comprueba que tu router tiene el puerto 9099 "
-"abierto y tu firewall permite el tráfico paraYorg en el puerto 9099"
+"Error de conexión. Por favor, comprueba que (I) tu cortafuegos permite "
+"trafico para Yorg en el puerto 9099 y  (II) el usuario del servidor ha "
+"abierto su puerto 9099 (aqui tienes una guía para comprobarlo: "
+"http://www.ya2.it/pages/check-your-ports.html)."
 
 #: menu/multiplayer/multiplayerfrm.py:103
 msgid ""
