--- a/assets/po/gl_ES.po
+++ b/assets/po/gl_ES.po
@@ -402,13 +402,14 @@ msgstr "borrar da partida"
 
 #: menu/multiplayer/network_dlg.py:13
 msgid ""
-"Connection error. Please check that your router is configured for doing port-"
-"forwarding for port 9099 on your host and your firewall allows traffic for "
-"Yorg on port 9099."
+"Connection error. Please check that (i) your firewall allows traffic for "
+"Yorg on port 9099 and (ii) the server user has opened her port 9099 (here is "
+"a guide for checking it: http://www.ya2.it/pages/check-your-ports.html)."
 msgstr ""
-"Erro de conexión. Por favor comproba que o teu router está configurado co "
-"porto9099 aberto no tou cliente e o teu firewall permite o tráfico paraYorg "
-"no porto 9099."
+"Erro de conexión. Por favor, comproba que (I) o teu cortalumes "
+"permite trafico para Yorg no porto 9099 e  (II) o usuario do servidor abriu "
+"o seu porto 9099 (aqui tes unha guía para comprobalo: "
+"http://www.ya2.it/pages/check-your-ports.html)."
 
 #: menu/multiplayer/multiplayerfrm.py:103
 msgid ""
