Updated gd translation

--- a/assets/po/gd.po
+++ b/assets/po/gd.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2018-05-09 07:58+0100\n"
+"PO-Revision-Date: 2018-05-17 10:48+0100\n"
 "Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
 "Language-Team: Fòram na Gàidhlig\n"
 "Language: gd\n"
@@ -404,6 +404,10 @@ msgid ""
 "Yorg on port 9099 and (ii) the server user has opened her port 9099 (here is "
 "a guide for checking it: http://www.ya2.it/pages/check-your-ports.html)."
 msgstr ""
+"Mearachd leis a’ cheangal. Dearbhaich (i) gun ceadaich an cachaileith-theine "
+"agad trafaig airson Yorg air port 9099 agus (ii) gun do dh’fhosgail "
+"cleachdaiche an fhrithealaiche port port 9099 (seo treòir air mar a "
+"dhearbhaicheas tu seo: http://www.ya2.it/pages/check-your-ports.html)."
 
 #: menu/multiplayer/multiplayerfrm.py:103
 msgid ""
